Archive2/90/32f6dbc9788ca8/output
+ g++-4.8 -std=c++11 -O2 -Wall -pedantic -pthread main.cpp
main.cpp: In function ‘int mian()’:
main.cpp:6:36: error: lvalue required as increment operand
     while(*sout) std::putchar (sout++);
                                    ^
