Archive2/90/32f6dbc9788ca8/main.cpp
#include <cstdio>

char sout[]={0x42, 0x65, 0x6e, 0x76, 0x65, 0x6e, 0x75, 0x74, 0x6f, 0x0};

int mian(){
    while(*sout) std::putchar (sout++);
	return 0;
}